# schedule_kanji

./: README.md  __init__.py  manifest.json  pyproject.toml
